# Distribuidos-Practica1

./: README.md
fileManager/: CMakeCache.txt  CMakeLists.txt  Makefile  clientMain.cpp  cmake_install.cmake  fileManager  filemanager.cpp  filemanager.h  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  main_fm.cpp  proyecto1Client  proyecto1Server  serverMain.cpp
fileManager/dirprueba/: prueba_1
multMatrix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main_multMatrix.cpp  multMatrixClient  multMatrixServer  multmatrix_imp.cpp  multmatrix_imp.h  multmatrix_stub.cpp  multmatrix_stub.h  resultado.txt  resultado2_remoto.txt  serverMain.cpp
multMatrix/dirprueba_local/: resultado2.txt
multMatrix/dirprueba_remoto/: resultado.txt
